--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ a, abbr, address, article, aside, audio, b, blockquote, body, canvas, cite, code
   font-size: 100%;
   margin: 0;
   outline: 0;
-  padding: 2;
+  padding-left: 10;
   vertical-align: baseline; }
 
 article,
